navbar issue fixed of overlapping by giving z-index

--- a/Ebook-Website/style.css
+++ b/Ebook-Website/style.css
@@ -9,12 +9,14 @@ body {
     background-color: rgb(237, 230, 230);
     width: 100vw;
     height: 100vh;
+    overflow-x: hidden;
 }
 
 .header-section {
     width: 100%;
     position: sticky;
     top: 0;
+    z-index: 10;
 }
 
 .navbar {
@@ -104,7 +106,7 @@ body {
 
 .nav-list {
     list-style: none;
-    padding: 0.8rem;
+    padding: 0.7rem;
 }
 
 .nav-list:hover {
@@ -149,12 +151,20 @@ body {
 }
 
 .submit-button {
-    color: black;
+    color: white;
     height: 1.8rem;
     width: 4.5rem;
     border-radius: 0.5rem;
-    border: 1px solid grey;
+    border: 1px solid rgb(133, 133, 254);
+    background-color: transparent;
     cursor: pointer;
+    transition: all 0.2s linear 0ms;
+}
+
+.submit-button:hover {
+    background-color: #3c3636;
+    transform: scale(1.05);
+    border: 1px solid rgb(178, 178, 245);
 }
 
 /* Main Section */
@@ -212,6 +222,7 @@ body {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 3rem 2rem;
+    margin-bottom: 3rem;
 }
 
 @media (max-width:900px) and (min-width:520px) {
@@ -309,4 +320,6 @@ body {
     border-radius: 0.5rem;
     margin-right: 0.6rem;
     margin-bottom: 0.4rem;
+    font-family: "Roboto", sans-serif;
+    font-size: 0.85rem;
 }
